# afr-example-wlan-offloads

./: .project  CMakeLists.txt  Makefile  README.md  main.c  wifi_config.h  wlan_offload.c  wlan_offload.h
.mtbLaunchConfigs/: afr-example-wlan-offloads Attach (JLink).launch  afr-example-wlan-offloads Attach (KitProg3).launch  afr-example-wlan-offloads Debug (JLink).launch  afr-example-wlan-offloads Debug (KitProg3).launch  afr-example-wlan-offloads Erase (JLink).launch  afr-example-wlan-offloads Erase (KitProg3).launch  afr-example-wlan-offloads Program (JLink).launch  afr-example-wlan-offloads Program (KitProg3).launch
COMPONENT_CUSTOM_DESIGN_MODUS/TARGET_CY8CKIT-062-WIFI-BT/: design.modus
COMPONENT_CUSTOM_DESIGN_MODUS/TARGET_CY8CKIT-062-WIFI-BT/GeneratedSource/: cycfg.c  cycfg.h  cycfg.timestamp  cycfg_clocks.c  cycfg_clocks.h  cycfg_connectivity_wifi.c  cycfg_connectivity_wifi.h  cycfg_peripherals.c  cycfg_peripherals.h  cycfg_pins.c  cycfg_pins.h  cycfg_routing.h  cycfg_system.c  cycfg_system.h
COMPONENT_CUSTOM_DESIGN_MODUS/TARGET_CY8CKIT-062S2-43012/: design.modus
COMPONENT_CUSTOM_DESIGN_MODUS/TARGET_CY8CKIT-062S2-43012/GeneratedSource/: cycfg.c  cycfg_clocks.c  cycfg_clocks.h  cycfg_connectivity_wifi.c  cycfg_connectivity_wifi.h  cycfg_notices.h  cycfg_pins.c  cycfg_pins.h  cycfg_routing.h  cycfg_system.c  cycfg_system.h
COMPONENT_CUSTOM_DESIGN_MODUS/TARGET_CY8CPROTO-062-4343W/: design.modus
COMPONENT_CUSTOM_DESIGN_MODUS/TARGET_CY8CPROTO-062-4343W/GeneratedSource/: cycfg.h  cycfg.timestamp  cycfg_clocks.c  cycfg_peripherals.h  cycfg_pins.c  cycfg_pins.h  cycfg_system.c  cycfg_system.h
config_files/: FreeRTOSConfig.h  lwipopts.h  trcConfig.h
make_support/: afr.mk  mtb_afr_source.mk  mtb_cypress_source.mk  mtb_feature_lpa.mk  mtb_global_settings.mk
